--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://gitname.github.io/react-gh-pages",
   "name": "dipendra",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
